# gridgen

./: Cargo.toml  build.rs
cpp_stuff/: header.h  sauce.cpp
src/: auro.rs  bench.rs  jetp.rs  main.rs
