[package]
name = "gridgen"
version = "0.1.0"
authors = ["Aurorans Solis <primalucegd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "bench"
harness = false
path = "src/bench.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false
